--- a/PokemonApplication/build.gradle
+++ b/PokemonApplication/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
+        classpath "io.realm:realm-gradle-plugin:10.8.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
