--- a/PokemonApplication/app/build.gradle
+++ b/PokemonApplication/app/build.gradle
@@ -92,4 +92,13 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
+
+
+    //Room
+    def room_version = "2.2.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
 }
